--- a/templates/security/emailPassword.html.twig
+++ b/templates/security/emailPassword.html.twig
@@ -12,7 +12,7 @@
             Bonjour,
         </p>
         <p>Vous recevez ce mail car vous avez demandé une réinitialisation de mot de passe. Pour procéder au changement,
-            <a class="light-blue-text" href="{{ path('app_reset_password', {'email': mail}) }}">cliquer ici</a>.
+            <a class="indigo-text" href="{{ path('app_reset_password', {'email': mail}) }}">cliquer ici</a>.
         </p>
         <p>Si vous n'êtes pas l'auteur de ce mail merci de prévenir l'administrateur de votre campus.</p>
     </div>
