--- a/templates/security/resetPassword.html.twig
+++ b/templates/security/resetPassword.html.twig
@@ -2,13 +2,32 @@
 {% form_theme resetPwdForm 'bootstrap_4_layout.html.twig' %}
 
 {% block body %}
-    <div class="card">
-        <h5 class="card-header">Réinitialisez votre mot de passe</h5>
-        <div class="card-body">
-            {{ form_start(resetPwdForm) }}
-            {{ form_widget(resetPwdForm) }}
-            <button class="btn grey lighten-2 btn-md mt-4" type="submit">Réinitialiser</button>
-            {{ form_end(resetPwdForm) }}
+    <h4>Réinitialisez votre mot de passe</h4>
+    {{ form_start(resetPwdForm) }}
+    <div class="md-form">
+        {{ form_widget(resetPwdForm.motpasse.first) }}
+
+        {{ form_label(resetPwdForm.motpasse.first) }}
+
+        <small>{{ form_help(resetPwdForm.motpasse.first) }}</small>
+
+        <div class="form-error">
+            {{ form_errors(resetPwdForm.motpasse.first) }}
         </div>
     </div>
+
+    <div class="md-form">
+        {{ form_widget(resetPwdForm.motpasse.second) }}
+
+        {{ form_label(resetPwdForm.motpasse.second) }}
+
+        <small>{{ form_help(resetPwdForm.motpasse.second) }}</small>
+
+        <div class="form-error">
+            {{ form_errors(resetPwdForm.motpasse.second) }}
+        </div>
+    </div>
+    {{ form_widget(resetPwdForm) }}
+    <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">Réinitialiser</button>
+    {{ form_end(resetPwdForm) }}
 {% endblock %}
