--- a/templates/ville/edit.html.twig
+++ b/templates/ville/edit.html.twig
@@ -41,7 +41,8 @@
 
                 <div class="form-row mb-4 flex justify-content-center">
                     <div class="col-sm-2 mr-5">
-                        <button class="btn btn-primary btn-rounded waves-effect my-4 btn-block" type="submit">
+                        <button class="btn light-blue darken-3 text-white btn-rounded waves-effect my-4 btn-block"
+                                type="submit">
                             Enregistrer
                         </button>
                     </div>
