--- a/templates/sortie/new-edit-old.html.twig
+++ b/templates/sortie/new-edit-old.html.twig
@@ -7,8 +7,8 @@
 
 
 
-<div class="card-body">
-    {{ form_start(form) }}
+    <div class="card-body">
+        {{ form_start(form) }}
 
         {{ form_errors(form) }}
 
@@ -26,36 +26,37 @@
         {{ form_row(form.siteOrganisateur) }}
         {{ form_row(form.ville) }}
         <div class=" mb-4 d-flex flex-row align-items-baseline justify-content-between">
-            {{ form_row(form.lieu) }} <a href="{{ path('lieu_create') }}" class="btn btn-primary btn-rounded"><i class="fas fa-plus mr-1"></i> Ajouter un lieu</a>
+            {{ form_row(form.lieu) }} <a href="{{ path('lieu_create') }}" class="btn btn-primary btn-rounded"><i
+                        class="fas fa-plus mr-1"></i> Ajouter un lieu</a>
         </div>
         <div class=" mb-4">
             {{ form_widget(form.Enregistrer) }}
             {{ form_widget(form.Publier) }}
         </div>
 
-    {{ form_end(form) }}
-</div>
+        {{ form_end(form) }}
+    </div>
 
 
     <script>
         var $ville = $('#sortie_ville');
-        var dateHeureDebut= $('#sortie_dateHeureDebut');
-        var dateLimiteInscription= $('#sortie_dateLimiteInscription');
+        var dateHeureDebut = $('#sortie_dateHeureDebut');
+        var dateLimiteInscription = $('#sortie_dateLimiteInscription');
         // When ville gets selected ...
-        $ville.change(function() {
+        $ville.change(function () {
             // ... retrieve the corresponding form.
             var $form = $(this).closest('form');
             // Simulate form data, but only include the selected ville value.
             var data = {};
             data[$ville.attr('name')] = $ville.val();
-            data[dateHeureDebut.attr('name')] =dateHeureDebut.val();
-            data[dateLimiteInscription.attr('name')] =dateLimiteInscription.val();
+            data[dateHeureDebut.attr('name')] = dateHeureDebut.val();
+            data[dateLimiteInscription.attr('name')] = dateLimiteInscription.val();
             // Submit data via AJAX to the form's action path.
             $.ajax({
-                url : $form.attr('action'),
+                url: $form.attr('action'),
                 type: $form.attr('method'),
-                data : data,
-                success: function(html) {
+                data: data,
+                success: function (html) {
                     // Replace current position field ...
                     console.log('succes');
                     $('#sortie_lieu').replaceWith(
@@ -66,11 +67,8 @@
                 }
             });
         });
-
         console.log(data);
     </script>
 
 {% endblock %}
 {% block javascripts %}{% endblock %}
-
-
