Design affichage d'une sortie

--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -3,15 +3,20 @@
 {% block body %}
 
     <div class="container-fluid">
-        <div class="row">
+
+        <div class="row col-md-8 col-lg-8 mx-auto mb-5 flex justify-content-center">
+            <h3 class="font-weight-bold">Affichage d'une sortie</h3>
+        </div>
+
+        <div class="row flex">
+            <div class="col-md-2 col-lg-2">
+            </div>
 
             <!--Grid column-->
-            <div class="col-md-8 col-lg-8 mx-auto">
+            <div class="col-md-6 col-lg-6">
 
                 <!-- Form -->
-
-                <form>
-
+                <form class="disabled">
                     <div class="form-row">
                         <div class="col">
                             <!-- Nom -->
@@ -21,83 +26,88 @@
                             </div>
                         </div>
                         <div class="col">
-                            <!-- Nom -->
+                            <!-- Campus -->
                             <div class="md-form">
                                 <input type="text" id="campus"  class="form-control" value="{{ sortie.siteOrganisateur.nom }}">
                                 <label for="campus">Campus</label>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col">
                             <!-- Date sortie -->
                             <div class="md-form">
-                                <input type="text" id="dateDeb" class="form-control" value="{{ sortie.dateHeureDebut | date("d/m/Y") }}">
-                                <label for="dateDeb">Date Sortie</label>
+                                <input type="text" id="dateDeb" class="form-control" value="{{ sortie.dateHeureDebut | date("d/m/Y H:i") }}">
+                                <label for="dateDeb">Date et heure de la sortie</label>
                             </div>
                         </div>
                         <div class="col">
-                            <!-- Date sortie -->
+                            <!-- Lieu -->
                             <div class="md-form">
                                 <input type="text" id="lieu" class="form-control" value="{{ sortie.lieu.nom }}">
                                 <label for="lieu">Lieu</label>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col">
-                            <!-- Date inscr -->
+                            <!-- Date Limite d'inscription -->
                             <div class="md-form">
-                                <input type="text" id="dateInsc" class="form-control" value="{{ sortie.dateLimiteInscription | date("d/m/Y") }}">
-                                <label for="dateInsc">Infos Sortie</label>
+                                <input type="text" id="dateLimite" class="form-control" value="{{ sortie.dateLimiteInscription | date("d/m/Y") }}">
+                                <label for="dateLimite">Date limite d'inscription</label>
                             </div>
                         </div>
                         <div class="col">
-                            <!-- Date sortie -->
+                            <!-- Rue -->
                             <div class="md-form">
                                 <input type="text" id="rue" class="form-control" value="{{ sortie.lieu.rue }}">
                                 <label for="rue">Rue</label>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col">
                             <!-- Nb participant sortie -->
                             <div class="md-form">
                                 <input type="text" id="NbInsc" class="form-control" value="{{ sortie.nbInscriptionsMax }}">
-                                <label for="NbInsc">Nobre de participant</label>
+                                <label for="NbInsc">Nombre de participants</label>
                             </div>
                         </div>
                         <div class="col">
-                            <!-- Date sortie -->
+                            <!-- Code Postal -->
                             <div class="md-form">
                                 <input type="text" id="CP" class="form-control" value="{{ sortie.lieu.ville.codePostal }}">
                                 <label for="CP">Code Postal</label>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col">
-                            <!-- duree sortie -->
+                            <!-- Durée sortie -->
                             <div class="md-form">
-                                <input type="text" id="duree" class="form-control" value="{{ sortie.duree }}">
-                                <label for="duree">Duree Sortie</label>
+                                <input type="text" id="duree" class="form-control" value="{{ sortie.duree }} minutes">
+                                <label for="duree">Durée Sortie</label>
                             </div>
                         </div>
                         <div class="col">
-                            <!-- Date sortie -->
+                            <!-- Ville -->
                             <div class="md-form">
-                                <input type="text" id="long" class="form-control" value="{{ sortie.lieu.longitude }}">
-                                <label for="long">Longitude</label>
+                                <input type="text" id="ville" class="form-control" value="{{ sortie.lieu.ville.nom }}">
+                                <label for="ville">Ville</label>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col">
-                            <!-- Infos sortie -->
+                            <!-- Longitude -->
                             <div class="md-form">
-                                <input type="text" id="infos" class="form-control" value="{{ sortie.infosSortie }}">
-                                <label for="infos">Infos Sortie</label>
+                                <input type="text" id="long" class="form-control" value="{{ sortie.lieu.longitude }}">
+                                <label for="long">Longitude</label>
                             </div>
                         </div>
                         <div class="col">
@@ -109,28 +119,50 @@
                         </div>
                     </div>
 
-                    {% if not private %}
-                        <div class="form-row">
-                    <!-- List user -->
-                            <div class="md-form ">
-                               <p>Liste participant</p>
-                                    <ul>
-                                    {%  for inscri in sortie.inscriptions  %}
-                                        <p>{{ inscri.participant.nom }}</p>
-                                    {% endfor %}
-                                    </ul>
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="md-form">
+                                <textarea type="text" id="infosSortie" class="form-control md-textarea">{{ sortie.infosSortie}}</textarea>
+                                <label for="infosSortieinfosSortie">Description et infos</label>
                             </div>
                         </div>
-                    {% endif %}
-
-
+                    </div>
                 </form>
-
-
-
 
             </div>
             <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-4 col-lg-4">
+
+                {% if not private %}
+                    <div class="form-row justify-content-center">
+                        <!-- List user -->
+                        <div class="md-form">
+                            <h5>Liste des participants inscrits : </h5>
+
+                            <table class="table" id="participantsTable">
+                                <thead>
+                                <tr>
+                                    <th scope="col" class="font-weight-bold">PSEUDO</th>
+                                    <th scope="col" class="font-weight-bold">NOM</th>
+                                    <th scope="col" class="font-weight-bold">PRENOM</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for inscri in sortie.inscriptions %}
+                                    <tr>
+                                        <th scope="row"> {{ inscri.participant.pseudo }}</th>
+                                        <th scope="row"> {{ inscri.participant.nom }}</th>
+                                        <th scope="row"> {{ inscri.participant.prenom }}</th>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
         </div>
     </div>
 {% endblock %}
